<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/shareAudioButton"
            android:src="@drawable/ic_audio_black_50px"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/pOnPButton"
            android:src="@drawable/ic_picture_in_picture_black_50px"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/chatGroupButton"
            android:src="@drawable/ic_group_work_black_50px"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/gestureButton"
            android:src="@drawable/gesture_black_50px"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>