<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:text="Gesture Selection" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:text="Enable Gestures" />

        <ToggleButton
            android:id="@+id/rd_t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/rd_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:text="View Gesture Emojis" />

        <Button
            android:id="@+id/rd_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:text="Record Gesture" />

        <Button
            android:id="@+id/rd_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_centerInParent="true"
            android:text="OK" />

    </LinearLayout>
</LinearLayout>